# calculadora_bdd

./: pyproject.toml
